# odoocker-goldberrygrove

./: .env.example  .env.grove.example  .env.infisical-seed.op.example  .env.monitoring.example  .env.plausible.example  .gitignore  .gitleaks.toml  .gol69-probe  .mcp.json.example  .trivyignore  CLAUDE.md  Makefile  README.md  docker-compose.monitoring.app-plane.yml  docker-compose.monitoring.yml  docker-compose.override.grove.yml  docker-compose.override.local.yml  docker-compose.override.production.yml  docker-compose.override.sandbox.yml  docker-compose.plausible.yml  docker-compose.yml  ownership.yml
.claude/: settings.local.json
.github/: pull_request_template.md
.zap/: baseline.conf
cost/: Dockerfile  README.md  crontab  do_billing_bridge.py  test_do_billing_bridge.py
do-metrics/: Dockerfile  README.md  crontab  do_metrics_bridge.py  test_do_metrics_bridge.py
docs/: ARCHITECTURE.md  ASSETS.md  DEPLOY-OBSERVABILITY.md  DEPLOY-OVERVIEW.md  DEPLOY.md  DEPLOYMENT.md  DEVELOPMENT.md  GHOST.md  MONITORING.md  RELEASE.md  RUNBOOK-blogs-reserved-ip-cutover.md  RUNBOOK-db-promotion-cutover.md  RUNBOOK-mailgun-transactional-email.md  RUNBOOK-managed-pg-odoo-bootstrap.md  RUNBOOK-odoo-filestore-restore.md  RUNBOOK-otto-key-writeback.md  RUNBOOKS.md  (+4 more)
scripts/preview/: .gitignore  post-restore-purge.sql  pyproject.toml  sanitize-and-upload.sh  sanitize_dump.py  seed-snapshot.sh
scripts/preview/tests/: conftest.py  test_post_restore.py  test_sanitize_dump.py
scripts/preview/tests/fixtures/: expected_full.sql  expected_partner.sql  input_full.sql  input_partner.sql
(+311 files in other folders)
